# 3DEngine

./: .gitignore  CmakeLists.txt  README.md
Scene/: CMakeLists.txt
Scene/include/: Arrows.hpp  Camera.hpp  Cube.hpp  OGLScene.hpp  Object.hpp  Scene.hpp  SceneObject.hpp  Sphere.hpp  Triangle.hpp
Scene/src/: Arrows.cpp  Camera.cpp  Cube.cpp  OGLScene.cpp  Object.cpp  Scene.cpp  SceneObject.cpp  Sphere.cpp  Triangle.cpp
form/: MainWindow.ui
include/: MainWindow.hpp
src/: MainWindow.cpp  main.cpp
